# gradient-projected-conjugate-gradient

./: .gitignore  LICENSE  README.md  examples.ipynb  examples_gpu.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: examples.ipynb  examples_gpu.ipynb
gpcg/: __init__.py  examples.py  gpcg.py  util.py
src/gpcg/: examples.py  util.py
